# pytest-starter

./: .editconfig  .gitignore  .pylintrc  Dockerfile  README.md  config.yml.example  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini
.circleci/: config.yml
modules/account/: __init__.py  account_adapter.py  account_module.py
modules/account/config/: __init__.py  account_config.py  account_config_parser.py
modules/account/entities/: account.py
modules/account/helpers/: __init__.py  get_empty_shell_account.py  get_report_account.py
modules/account/tests/API/: test_list_accounts.py
modules/admin/: __init__.py
modules/admin/pages/: admin_header.py  admin_layout.py  admin_sidebar_menu.py
modules/api_client/: account_api_resource.py  api_client.py  auth_api_resource.py
modules/app/: __init__.py  application_bootstrapper.py
modules/auth/: __init__.py  auth_adapter.py  auth_config_parser.py  auth_module.py
modules/auth/config/: __init__.py  auth.py
modules/auth/entities/: role.py  user.py
modules/auth/helpers/: __init__.py  login_as_sys_admin.py
modules/auth/pages/: login_page.py
modules/core/: __init__.py  adapter.py  api_client.py  core_module.py
modules/core/helpers/: __init__.py  get_current_date_in_pst.py  init_api_client.py
modules/core/pages/: loading_page.py
modules/dashboard/: __init__.py  dashboard_module.py
modules/dashboard/pages/: dashboard_page.py
tests/: base_api_test.py  base_ui_test.py  conftest.py
tests/API/auth/: test_login.py
tests/UI/: base_ui_test.py
tests/UI/auth/: test_login.py
tools/scripts/: encrypt_config.py
(+3 files in other folders)
