[tool.poetry]
name = "pytest-starter"
version = "0.1.0"
description = "Automated API and UI test"
authors = ["Onramplab Dev <dev@onramplab.com>"]

[tool.poetry.dependencies]
boto3 = "^1.34.0"
injector = "^0.21.0"
interstellar = {git = "https://github.com/OnrampLab/interstellar.git"}
interstellar-antd = {git = "https://github.com/OnrampLab/interstellar-antd.git"}
jsonpath = "^0.82"
requests = "^2.31.0"
selenium = "^4.18.0"
python = "^3.12"
pytest = "^8.0.0"
pytest-xdist = "^3.5.0"
pytz = "^2024.1"
pyyaml = "^6.0"
