[tool.poetry]
name = "pytest-starter"
version = "0.1.0"
description = "Automated API and UI test"
authors = ["Onramplab Dev <dev@onramplab.com>"]

[tool.poetry.dependencies]
boto3 = "^1.34.0"
injector = "^0.21.0"
jsonpath = "^0.82"
requests = "^2.31.0"
selenium = "^4.19.0"
pydantic = "^2.9.2"
python = "^3.12"
pytest = "^8.1.1"
pytest-xdist = "^3.5.0"
pytz = "^2024.1"
pyyaml = "^6.0.1"
transstellar = "^3.11.0"
transstellar-antd = "^0.19.3"
